update CoW scripts en waardenlijst

--- a/jsf/andb_apprentice_all_series-2020_12_09.csv-metadata.json
+++ b/jsf/andb_apprentice_all_series-2020_12_09.csv-metadata.json
@@ -58,6 +58,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{{adm_id}}",
     "propertyUrl": "rdfs:label",
@@ -85,6 +86,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{{([adm_image_no, '-master']|join)}}",
     "propertyUrl": "rdfs:label",
@@ -118,6 +120,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{{([adm_image_no, '-level2']|join)}}",
     "propertyUrl": "rdfs:label",
@@ -151,6 +154,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{{([adm_image_no, '-level3']|join)}}",
     "propertyUrl": "rdfs:label",
@@ -332,6 +336,7 @@
    }, 
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "null": "",
     "aboutUrl": "{% if ( (sdn_street_01 != '' ) or (sdn_street_no_01 != '') or (sdn_city_01 != '') ) %}{{([adm_id, '-residency_01']|join)}}{% endif %}",
@@ -446,6 +451,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (sdn_street_01 != '' ) or (sdn_street_no_01 != '') or (sdn_city_01 != '') ) %}{{([adm_id, '-residency_01-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -502,6 +508,7 @@
    }, 
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "null": "",
     "aboutUrl": "{% if ( (sdn_street_02 != '' ) or (sdn_street_no_02 != '') or (sdn_city_02 != '') ) %}{{([adm_id, '-residency_02']|join)}}{% endif %}",
@@ -616,6 +623,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (sdn_street_02 != '' ) or (sdn_street_no_02 != '') or (sdn_city_02 != '') ) %}{{([adm_id, '-residency_02-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -678,6 +686,7 @@
    }, 
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "null": "",
     "aboutUrl": "{% if ( (sdn_street_03 != '' ) or (sdn_street_no_03 != '') or (sdn_city_03 != '') ) %}{{([adm_id, '-residency_03']|join)}}{% endif %}",
@@ -792,6 +801,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (sdn_street_03 != '' ) or (sdn_street_no_03 != '') or (sdn_city_03 != '') ) %}{{([adm_id, '-residency_03-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -854,6 +864,7 @@
    }, 
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "null": "",
     "aboutUrl": "{% if ( (sdn_street_04 != '' ) or (sdn_street_no_04 != '') or (sdn_city_04 != '') ) %}{{([adm_id, '-residency_04']|join)}}{% endif %}",
@@ -968,6 +979,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (sdn_street_04 != '' ) or (sdn_street_no_04 != '') or (sdn_city_04 != '') ) %}{{([adm_id, '-residency_04-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -1030,6 +1042,7 @@
    }, 
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "null": "",
     "aboutUrl": "{% if ( (sdn_street_05 != '' ) or (sdn_street_no_05 != '') or (sdn_city_05 != '') ) %}{{([adm_id, '-residency_05']|join)}}{% endif %}",
@@ -1144,6 +1157,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (sdn_street_05 != '' ) or (sdn_street_no_05 != '') or (sdn_city_05 != '') ) %}{{([adm_id, '-residency_05-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -1212,6 +1226,7 @@
    }, 
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{{([adm_id, '-education']|join)}}",
     "propertyUrl": "rdfs:label",
@@ -1232,6 +1247,7 @@
    }, 
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "https://iisg.amsterdam/id/adb-andb/{{sdn_occupation}}",
     "propertyUrl": "rdfs:label",
@@ -1387,6 +1403,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "null": {"@list": [{"name": "adm_remarks", "null": ""}]},
     "aboutUrl": "{{([adm_id, '-education']|join)}}",
@@ -1481,6 +1498,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_01 != '' ) or (wsp_street_01 != '') or (mst_name_01 != '') ) %}{{([adm_id, '-internship_01']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -1604,6 +1622,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_01 != '' ) or (wsp_street_01 != '') or (mst_name_01 != '') ) %}{{([adm_id, '-internship_01-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -1737,6 +1756,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_02 != '' ) or (wsp_street_02 != '') or (mst_name_02 != '') ) %}{{([adm_id, '-internship_02']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -1860,6 +1880,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_02 != '' ) or (wsp_street_02 != '') or (mst_name_02 != '') ) %}{{([adm_id, '-internship_02-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -1999,6 +2020,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_03 != '' ) or (wsp_street_03 != '') or (mst_name_03 != '') ) %}{{([adm_id, '-internship_03']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -2122,6 +2144,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_03 != '' ) or (wsp_street_03 != '') or (mst_name_03 != '') ) %}{{([adm_id, '-internship_03-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -2261,6 +2284,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_04 != '' ) or (wsp_street_04 != '') or (mst_name_04 != '') ) %}{{([adm_id, '-internship_04']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -2384,6 +2408,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_04 != '' ) or (wsp_street_04 != '') or (mst_name_04 != '') ) %}{{([adm_id, '-internship_04-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -2523,6 +2548,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_05 != '' ) or (wsp_street_05 != '') or (mst_name_05 != '') ) %}{{([adm_id, '-internship_05']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -2646,6 +2672,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_05 != '' ) or (wsp_street_05 != '') or (mst_name_05 != '') ) %}{{([adm_id, '-internship_05-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -2785,6 +2812,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_06 != '' ) or (wsp_street_06 != '') or (mst_name_06 != '') ) %}{{([adm_id, '-internship_06']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -2908,6 +2936,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_06 != '' ) or (wsp_street_06 != '') or (mst_name_06 != '') ) %}{{([adm_id, '-internship_06-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -3047,6 +3076,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_07 != '' ) or (wsp_street_07 != '') or (mst_name_07 != '') ) %}{{([adm_id, '-internship_07']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -3170,6 +3200,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_07 != '' ) or (wsp_street_07 != '') or (mst_name_07 != '') ) %}{{([adm_id, '-internship_07-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -3309,6 +3340,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_08 != '' ) or (wsp_street_08 != '') or (mst_name_08 != '') ) %}{{([adm_id, '-internship_08']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -3432,6 +3464,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_08 != '' ) or (wsp_street_08 != '') or (mst_name_08 != '') ) %}{{([adm_id, '-internship_08-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -3571,6 +3604,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_09 != '' ) or (wsp_street_09 != '') or (mst_name_09 != '') ) %}{{([adm_id, '-internship_09']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -3694,6 +3728,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_09 != '' ) or (wsp_street_09 != '') or (mst_name_09 != '') ) %}{{([adm_id, '-internship_09-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -3833,6 +3868,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true", 
     "aboutUrl": "{% if ( (wsp_name_10 != '' ) or (wsp_street_10 != '') or (mst_name_10 != '') ) %}{{([adm_id, '-internship_10']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -3956,6 +3992,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "aboutUrl": "{% if ( (wsp_name_10 != '' ) or (wsp_street_10 != '') or (mst_name_10 != '') ) %}{{([adm_id, '-internship_10-interval']|join)}}{% endif %}",
     "propertyUrl": "rdfs:label",
@@ -4105,6 +4142,7 @@
    }, 
     {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "null": {"@list": [{"name": "un_name", "null": ""}]},
     "aboutUrl": "{{([adm_id, ' ', un_section, ' ', un_section_no]|join)|replace(' ', '_')}}",
@@ -4136,6 +4174,7 @@
    }, 
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "null": {"@list": [{"name": "un_section", "null": ""}]},
     "aboutUrl": "{{([un_name, ' ', un_section]|join)|replace(' ', '_')}}",
@@ -4411,6 +4450,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "null": {"@list": [{"name": "par_un_name", "null": ""}]},
     "aboutUrl": "{{([adm_id, '-par_membership']|join)}}",
@@ -4441,6 +4481,7 @@
    },
    {
     "lang": "nl",
+    "datatype": "xsd:string",
     "virtual": "true",
     "null": {"@list": [{"name": "par_un_section", "null": ""}]},
     "aboutUrl": "{{([par_un_name, ' ', par_un_section]|join)|replace(' ', '_')}}",
